--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
-    
+
 </head>
+
 <body>
+    <header>
+        <div class="header-div">
+            <h1>
+                Bienvenidos a tu biblioteca digital
+            </h1>
+            <span>
+                <img src="./assets/img/libros.png" alt="">
+            </span>
+        </div>
+    </header>
+    <main>
+        <div class="main-div">
+            <ul>
+                <li>
+                    El libro Rojo 📕
+                </li>
+                <li>
+                    La Revista Verde 📗
+                </li>
+                <li>
+                    El Cuaderno azul 📘
+                </li>
+                <li>
+                    La carpeta amarilla 📒
+                </li>
+            </ul>
+        </div>
+    </main>
+    <footer>
+
+    </footer>
     <script src="./JS/main.js"></script>
 </body>
+
 </html>
