--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Josefin+Sans:ital,wght@0,500;1,300&family=Montserrat:ital,wght@0,500;1,700&family=Outfit:wght@400;700&family=Poppins:wght@200&family=Protest+Riot&display=swap" rel="stylesheet">
+    <script defer src="./JS/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+        
     <title>Document</title>
 
 </head>
@@ -18,30 +22,21 @@
             <span>
                 <img src="./assets/img/libros.png" alt="">
             </span>
+            <div class="cart-button">
+                <a href="./pages/checkout.html"><button>Ver Carrito</button></a>
+            </div>
         </div>
     </header>
-    <main>
-        <div class="main-div">
-            <ul>
-                <li>
-                    El libro Rojo 📕
-                </li>
-                <li>
-                    La Revista Verde 📗
-                </li>
-                <li>
-                    El Cuaderno azul 📘
-                </li>
-                <li>
-                    La carpeta amarilla 📒
-                </li>
-            </ul>
+    <main class="main-div">
+        
+        <div id="cards-containers" class="cards-style">
+
         </div>
     </main>
     <footer>
 
     </footer>
-    <script src="./JS/main.js"></script>
+    <!--<script src="./JS/main.js"></script>!-->
 </body>
 
 </html>
